@@ -1938,6 +1938,7 @@ AC_CONFIG_FILES([GNUmakefile
    libpgcommon/Makefile
    libpgcommon/cunit/Makefile
    postgis/Makefile
+   postgis/cunit/Makefile
    postgis/sqldefines.h
    sfcgal/Makefile
    $SFCGAL_MAKEFILE_LIST
